--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,12 @@
 # Temporary files created by R markdown
 # User-specific files
 # knitr and R markdown default cache directories
+# large files
 # pkgdown site
 # produced vignettes
 # translation temp files
 *-Ex.R
+*.csv
 *.dbf
 *.doc*
 *.gddoc
@@ -23,6 +25,7 @@
 *.html
 *.knit.md
 *.mdb
+*.pdf
 *.shp*
 *.shx
 *.utf8.md
